--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Надо сделать идеально</title>
-  
-  <link rel="icon" href="favicon.ico" sizes="any">
-  <link rel="icon" href="icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Надо сделать идеально</title>
 
-  <link rel="stylesheet" href="./fonts/fonts.css" />
-  <link rel="stylesheet" href="./styles/global.css" />
-  <link rel="stylesheet" href="./styles/style.css" />
-  
-  <meta property="og:title" content="Надо сделать идеально">
-  <meta property="og:description" content="Страница о взгляде на перфекционизм в работе и учёбе.">
-  <meta property="og:image" content="./images/og.png">
+    <link rel="icon" href="favicon.ico" sizes="any" />
+    <link rel="icon" href="icon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
-</head>
-<body>
-  <h1 class="title">Надо сделать идеально</h1>
-  <video class="video" autoplay muted loop poster="./images/poster.png">
-    <source src="./video/cover-video.mp4" type="video/mp4">
-  </video>
-</body>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+
+    <meta property="og:title" content="Надо сделать идеально" />
+    <meta
+      property="og:description"
+      content="Страница о взгляде на перфекционизм в работе и учёбе."
+    />
+    <meta property="og:image" content="./images/og.png" />
+  </head>
+
+  <body>
+    <h1 class="title">Надо сделать идеально</h1>
+    <video class="video" autoplay muted loop poster="./images/poster.png">
+      <source src="./video/cover-video.mp4" type="video/mp4" />
+    </video>
+  </body>
 </html>
